# OCR-document-categorizer

./: .dockerignore  .koyebignore  DEPLOY.md  Dockerfile  KOYEB_DEPLOY_NOW.md  README.md  generate_sample_image.py  ocr_reader.py  pyproject.toml  render.yaml  requirements.txt  run_server.ps1  test_gemini.py  web_app.py
src/ocr_document_categorizer/: __init__.py  app.py  categorize.py  cli.py  cropping.py  export.py  layout.py  ocr.py  pipeline.py
web/: app.js  index.html  styles.css
